--- a/style.css
+++ b/style.css
@@ -4,16 +4,11 @@ body {
     color: #57676e;
     margin: 0 auto;
     max-width: 850px;
+    margin-bottom: 45px;
 }
 
 a {
     text-decoration: none;
-    color: #57676e;
-}
-
-hr {
-    width: 100%;
-    max-height: 0;
 }
 
 nav {
@@ -26,7 +21,6 @@ nav ul {
     float: left;
     list-style: none;
     overflow: hidden;
-    
 }
 
 nav ul li {
@@ -39,21 +33,33 @@ nav ul li a {
     width: 100%;
     text-align: center;
     padding: 8px 0;
+    color: #1c2c34;
 }
 
 footer {
+    bottom:0;
     text-align: center;
 }
 
 footer i {
     padding-right: .2em;
     padding-left: .2em;
+    color: #57676e;
 }
 
 .picMe {
-    height: 400;
-    width: 266;
+    height: 400px;
+    width: 266px;
     float:left;
     padding-right: 1em;
     padding-bottom: 1em;
+}
+
+.footer {
+    position:absolute;
+    height:50px;
+    bottom:px;
+    left:0px;
+    right:0px;
+    margin-bottom:0px;   
 }
