--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,17 @@
 body {
-    background: #e7eef2;
+	width:100%;
+	height:100%;
+    background: #f2f2f2;
     font-family: 'Open Sans', sans-serif;
     color: #57676e;
-    margin: 0 auto;
-    max-width: 960px;
+    margin: 0;
+	padding: 0;
     word-wrap: break-word;
 }
 
-a {
-    text-decoration: none;
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
 }
 
 nav ul {
@@ -67,4 +70,11 @@ footer i {
    padding-right: .32em;
    padding-left: .32em;
    color: #57676e;
+}
+
+#particles-js canvas{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
